syntax = "proto3";

import "google/protobuf/timestamp.proto";

package categories;

option go_package = "github.com/DKhorkov/hmtm-toys/api/protobuf/toys;toys";


service CategoriesService {
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {}
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse) {}
}

message GetCategoryRequest {
  string requestID = 1;
  uint32 ID = 2;
}

message GetCategoriesRequest {
  string requestID = 1;
}

message GetCategoryResponse {
  uint32 ID = 1;
  string name = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
}

message GetCategoriesResponse {
  repeated GetCategoryResponse categories = 1;
}

